@@ -74,7 +74,7 @@ ActionController::Routing::Routes.draw do |map|
 
   map.connect "archives/category/:category", 
   :controller => "notes", 
-  :action => "show_category", :category => /\w+/, :page => '1'
+  :action => "show_category", :category => /\w+(\.html)?/, :page => '1'
   map.connect "archives/category/:category/page/:page", 
   :controller => "notes", 
   :action => "show_category", :category => /\w+/, :page => /\d+/
